src/main/scala/uclid/lang/UclidParser.scala
/*
 * UCLID5 Verification and Synthesis Engine
 *
 * Copyright (c) 2017.
 * Sanjit A. Seshia, Rohit Sinha and Pramod Subramanyan.
 *
 * All Rights Reserved.
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are
 * met:
 * 1. Redistributions of source code must retain the above copyright notice,
 *
 * this list of conditions and the following disclaimer.
 * 2. Redistributions in binary form must reproduce the above copyright
 * notice, this list of conditions and the following disclaimer in the
 *
 * documentation and/or other materials provided with the distribution.
 * 3. Neither the name of the copyright holder nor the names of its
 * contributors may be used to endorse or promote products derived from this
 * software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
 * IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
 * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
 * PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
 * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 *
 * Authors: Rohit Sinha, Pramod Subramanyan

 * Parser for UCLID5.
 *
 */

package uclid
package lang

import scala.util.parsing.input.Positional
import scala.util.parsing.combinator.syntactical._
import scala.util.parsing.combinator.PackratParsers

import scala.language.implicitConversions
import scala.collection.mutable

/** This is a re-implementation of the Scala libraries StdTokenParsers with StdToken replaced by UclidToken. */
trait UclidTokenParsers extends TokenParsers {
  type Tokens <: UclidTokens
  import lexical.{Keyword, IntegerLit, RealLit, BitVectorTypeLit, BitVectorLit, FloatTypeLit, StringLit, Identifier}

  protected val keywordCache = mutable.HashMap[String, Parser[String]]()

  /** A parser which matches a single keyword token.
   *
   * @param chars    The character string making up the matched keyword.
   * @return a `Parser` that matches the given string
   */
  implicit def keyword(chars: String): Parser[String] =
    keywordCache.getOrElseUpdate(chars, accept(Keyword(chars)) ^^ (_.chars))

  /** A parser which matches an integer literal */
  def integerLit: Parser[IntegerLit] =
    elem("integer", _.isInstanceOf[IntegerLit]) ^^ (_.asInstanceOf[IntegerLit])

  /** A parser which matches a real literal */
  def realLit: Parser[RealLit] =
    elem("real", _.isInstanceOf[RealLit]) ^^ (_.asInstanceOf[RealLit])

  /** A parser which matches a bitvector type */
  def bitVectorType: Parser[BitVectorTypeLit] =
    elem("bitvector type", _.isInstanceOf[BitVectorTypeLit]) ^^ {_.asInstanceOf[BitVectorTypeLit]}

  /** A parser which matches a bitvector literal */
  def bitvectorLit: Parser[BitVectorLit] =
    elem("bitvector", _.isInstanceOf[BitVectorLit]) ^^ (_.asInstanceOf[BitVectorLit])


  /** A parser which matches a float type */
  def floatType: Parser[FloatTypeLit] =
    elem("float type", _.isInstanceOf[FloatTypeLit]) ^^ {_.asInstanceOf[FloatTypeLit]}

  /** A parser which matches a string literal */
  def stringLit: Parser[String] =
    elem("string literal", _.isInstanceOf[StringLit]) ^^ (_.chars)

  /** A parser which matches an identifier */
  def ident: Parser[String] =
    elem("identifier", _.isInstanceOf[Identifier]) ^^ (_.chars)
}

object UclidParser extends UclidTokenParsers with PackratParsers {
    type Tokens = UclidTokens
    val lexical = new UclidLexical

    // an implicit keyword function that gives a warning when a given word is not in the reserved/delimiters list
    override implicit def keyword(chars : String): Parser[String] = {
      if(lexical.reserved.contains(chars) || lexical.delimiters.contains(chars)) super.keyword(chars)
      else failure("You are trying to parse \""+chars+"\", but it is neither contained in the delimiters list, nor in the reserved keyword list of your lexical object")
    }

    sealed class PositionedString(val str : String) extends Positional
    lazy val OpAnd = "&&"
    lazy val OpOr = "||"
    lazy val OpBvAnd = "&"
    lazy val OpBvOr = "|"
    lazy val OpBvXor = "^"
    lazy val OpBvNot = "~"
    lazy val OpAdd = "+"
    lazy val OpSub = "-"
    lazy val OpMul = "*"
    lazy val OpDiv = "/"
    lazy val OpUDiv = "/_u"
    lazy val OpBvSrem = "%"
    lazy val OpBvUrem = "%_u"
    lazy val OpBiImpl = "<==>"
    lazy val OpImpl = "==>"
    lazy val OpLT = "<"
    lazy val OpULT = "<_u"
    lazy val OpGT = ">"
    lazy val OpUGT = ">_u"
    lazy val OpLE = "<="
    lazy val OpULE = "<=_u"
    lazy val OpGE = ">="
    lazy val OpUGE = ">=_u"
    lazy val OpEQ = "=="
    lazy val OpNE = "!="
    lazy val OpConcat = "++"
    lazy val OpNeg = "-"
    lazy val OpNot = "!"
    lazy val OpMinus = "-"
    lazy val OpPrime = "'"
    lazy val KwProcedure = "procedure"
    lazy val KwBoolean = "boolean"
    lazy val KwInteger = "integer"
    lazy val KwReal = "real"
    lazy val KwHalf = "half"
    lazy val KwSingle = "single"
    lazy val KwDouble = "double"
    lazy val KwEnum = "enum"
    lazy val KwData = "datatype"
    lazy val KwRecord = "record"
    lazy val KwReturns = "returns"
    lazy val KwAssume = "assume"
    lazy val KwAssert = "assert"
    lazy val KwHavoc = "havoc"
    lazy val KwVar = "var"
    lazy val KwSharedVar = "sharedvar"
    lazy val KwConst = "const"
    lazy val KwConstRecord = "const_record"
    lazy val KwSkip = "skip"
    lazy val KwCall = "call"
    lazy val KwIf = "if"
    lazy val KwThen = "then"
    lazy val KwElse = "else"
    lazy val KwCase = "case"
    lazy val KwEsac = "esac"
    lazy val KwFor = "for"
    lazy val KwIn = "in"
    lazy val KwRange = "range"
    lazy val KwWhile = "while"
    lazy val KwInstance = "instance"
    lazy val KwImport = "import"
    lazy val KwType = "type"
    lazy val KwInput = "input"
    lazy val KwOutput = "output"
    lazy val KwInit = "init"
    lazy val KwNext = "next"
    lazy val KwModule = "module"
    lazy val KwLambda = "lambda"
    lazy val KwFunction = "function"
    lazy val KwOracle = "oracle"
    lazy val KwControl = "control"
    lazy val KwForall = "forall"
    lazy val KwExists = "exists"
    lazy val KwFiniteForall = "finite_forall"
    lazy val KwFiniteExists = "finite_exists"
    lazy val KwDefault = "default"
    lazy val KwSynthesis = "synthesis"
    lazy val KwGrammar = "grammar"
    lazy val KwRequires = "requires"
    lazy val KwDefine = "define"
    lazy val KwEnsures = "ensures"
    lazy val KwInvariant = "invariant"
    lazy val KwProperty = "property"
    lazy val KwDefineAxiom = "axiom"
    lazy val KwModifies = "modifies"
    lazy val KwParameter = "parameter"
    lazy val KwHyperProperty = "hyperproperty"
    lazy val KwHyperInvariant = "hyperinvariant"
    lazy val KwHyperAxiom = "hyperaxiom"
    lazy val KwMacro = "macro"
    lazy val KwGroup = "group"
    // lazy val TemporalOpGlobally = "G"
    // lazy val TemporalOpFinally = "F"
    // lazy val TemporalOpNext = "Next"
    // lazy val TemporalOpUntil = "U"
    // lazy val TemporalOpWUntil = "W"
    // lazy val TemporalOpRelease = "R"
    

    lexical.delimiters ++= List("(", ")", ",", "[", "]",
      "bv", "fp", "{", "}", ";", "=", ":", "::", ".", "*", "::=", "->", ":=",
      OpAnd, OpOr, OpBvAnd, OpBvOr, OpBvXor, OpBvNot, OpAdd, OpSub, OpMul, OpDiv, OpUDiv,
      OpBiImpl, OpImpl, OpLT, OpGT, OpLE, OpGE, OpULT, OpUGT, OpULE, OpUGE, 
      OpEQ, OpNE, OpConcat, OpNot, OpMinus, OpPrime, OpBvUrem, OpBvSrem)
    lexical.reserved += (OpAnd, OpOr, OpAdd, OpSub, OpMul, OpDiv, OpUDiv,
      OpBiImpl, OpImpl, OpLT, OpGT, OpLE, OpGE, OpULT, OpUGT, OpULE, OpUGE, OpEQ, OpNE,
      OpBvAnd, OpBvOr, OpBvXor, OpBvUrem, OpBvSrem, OpBvNot, OpConcat, OpNot, OpMinus, OpPrime,
      "false", "true", "bv", "fp", KwProcedure, KwBoolean, KwInteger, KwReal, KwHalf, KwSingle, KwDouble , KwReturns,
      KwAssume, KwAssert, KwSharedVar, KwVar, KwHavoc, KwCall, KwImport,
      KwIf, KwThen, KwElse, KwCase, KwEsac, KwFor, KwIn, KwRange, KwWhile,
      KwInstance, KwInput, KwOutput, KwConst, KwConstRecord, KwModule, KwType, KwEnum, KwData,
      KwRecord, KwSkip, KwDefine, KwFunction, KwOracle, KwControl, KwInit,
      KwNext, KwLambda, KwModifies, KwProperty, KwDefineAxiom,
      KwForall, KwExists, KwFiniteForall, KwFiniteExists, KwGroup, KwDefault, KwSynthesis, KwGrammar, KwRequires,
      KwEnsures, KwInvariant, KwParameter, 
      KwHyperProperty, KwHyperInvariant, KwHyperAxiom, KwMacro)

    lazy val ast_binary: Expr ~ String ~ Expr => Expr = {
      case x ~ OpBiImpl ~ y => OperatorApplication(IffOp(), List(x, y))
      case x ~ OpImpl ~ y => OperatorApplication(ImplicationOp(), List(x, y))
      case x ~ OpAnd ~ y => OperatorApplication(ConjunctionOp(), List(x, y))
      case x ~ OpOr ~ y => OperatorApplication(DisjunctionOp(), List(x, y))
      case x ~ OpBvAnd ~ y => OperatorApplication(BVAndOp(0), List(x, y))
      case x ~ OpBvOr ~ y => OperatorApplication(BVOrOp(0), List(x, y))
      case x ~ OpBvXor ~ y => OperatorApplication(BVXorOp(0), List(x, y))
      case x ~ OpBvUrem ~ y => OperatorApplication(BVUremOp(0), List(x, y))
      case x ~ OpBvSrem ~ y => OperatorApplication(BVSremOp(0), List(x, y))  
      case x ~ OpLT ~ y => OperatorApplication(LTOp(), List(x,y))
      case x ~ OpGT ~ y => OperatorApplication(GTOp(), List(x,y))
      case x ~ OpLE ~ y => OperatorApplication(LEOp(), List(x,y))
      case x ~ OpGE ~ y => OperatorApplication(GEOp(), List(x,y))
      case x ~ OpULT ~ y => OperatorApplication(BVLTUOp(0), List(x,y))
      case x ~ OpUGT ~ y => OperatorApplication(BVGTUOp(0), List(x,y))
      case x ~ OpULE ~ y => OperatorApplication(BVLEUOp(0), List(x,y))
      case x ~ OpUGE ~ y => OperatorApplication(BVGEUOp(0), List(x,y))
      case x ~ OpEQ ~ y => OperatorApplication(EqualityOp(), List(x, y))
      case x ~ OpNE ~ y => OperatorApplication(InequalityOp(), List(x, y))
      case x ~ OpConcat ~ y => OperatorApplication(ConcatOp(), List(x,y))
      case x ~ OpAdd ~ y => OperatorApplication(AddOp(), List(x,y))
      case x ~ OpSub ~ y => OperatorApplication(SubOp(), List(x,y))
      case x ~ OpMul ~ y => OperatorApplication(MulOp(), List(x,y))
      case x ~ OpDiv ~ y => OperatorApplication(DivOp(), List(x,y))
      case x ~ OpUDiv ~ y => OperatorApplication(BVUDivOp(0), List(x,y))
    }

    lazy val LLOp : Parser[Operator] = positioned { 
      OpLT ^^ { case _ => lang.LTOp() } | 
      OpULT ^^ { case _ => lang.BVLTUOp(0) } | 
      OpLE ^^ { case _ => lang.LEOp() } | 
      OpULE ^^ { case _ => lang.BVLEUOp(0) }
    }
    lazy val RelOp: Parser[String] = OpGT | OpUGT | OpLT | OpULT | OpEQ | OpNE | OpGE | OpUGE | OpLE | OpULE
    lazy val UnOp: Parser[String] = OpNot | OpMinus
    lazy val RecordSelectOp: Parser[PolymorphicSelect] = positioned {
      ("." ~> Id) ^^ { case id => PolymorphicSelect(id) }
    }
    lazy val HyperSelectOp: Parser[lang.HyperSelect] = positioned {
      "." ~> Integer ^^ { case i => lang.HyperSelect(i.value.toInt) }
    }

    lazy val ArraySelectOp: Parser[ArraySelect] =
      ("[" ~> Expr ~ rep("," ~> Expr) <~ "]") ^^ {case e ~ es => ArraySelect(e :: es) }
    lazy val ArrayStoreOp: Parser[ArrayUpdate] =
      ("[" ~> (Expr ~ rep("," ~> Expr) ~ ("->" ~> Expr)) <~ "]") ^^
      {case e ~ es ~ r => ArrayUpdate(e :: es, r)}
    lazy val RecordStoreOp: Parser[RecordUpdate] =
      ("[" ~> (Id ~ (":=" ~> Expr)) <~ "]") ^^ 
      {case id ~ e => RecordUpdate(id, e)}
    lazy val ConstBitVectorSlice: Parser[lang.ConstBitVectorSlice] =
      positioned { ("[" ~> Integer ~ ":" ~ Integer <~ "]") ^^ { case x ~ ":" ~ y => lang.ConstBitVectorSlice(x.value.toInt, y.value.toInt) } }
    lazy val VarBitVectorSlice: Parser[lang.VarBitVectorSlice] =
      positioned { ("[" ~> Expr ~ ":" ~ Expr <~ "]") ^^ { case x ~ ":" ~ y => lang.VarBitVectorSlice(x, y) } }
    lazy val ConstExtractOp : Parser[lang.ConstExtractOp] =
      ("[" ~> Integer ~ ":" ~ Integer <~ "]") ^^ { case x ~ ":" ~ y => lang.ConstExtractOp(lang.ConstBitVectorSlice(x.value.toInt, y.value.toInt)) }
    lazy val VarExtractOp : Parser[lang.VarExtractOp] =
      positioned { ("[" ~> Expr ~ ":" ~ Expr <~ "]") ^^ { case x ~ ":" ~ y => lang.VarExtractOp(lang.VarBitVectorSlice(x, y)) } }
    lazy val ExtractOp : Parser[lang.ExtractOp] = positioned { ConstExtractOp | VarExtractOp }
    lazy val Id: PackratParser[Identifier] = positioned { ident ^^ {case i => Identifier(i)} }
    /* BEGIN Literals. */
    lazy val Bool: PackratParser[BoolLit] =
      positioned { "false" ^^ { _ => BoolLit(false) } | "true" ^^ { _ => BoolLit(true) } }
    lazy val Integer: PackratParser[lang.IntLit] =
      positioned { integerLit ^^ { case intLit => IntLit(BigInt(intLit.chars, intLit.base))} }
    lazy val Real: PackratParser[lang.RealLit] =
      positioned { realLit ^^ { case realLit => lang.RealLit(realLit.integral, realLit.frac)} }
    lazy val Float: PackratParser[lang.FloatLit] =
      positioned { 
                    Integer ~ KwHalf    ^^ { case intLit ~ s   => lang.FloatLit(intLit.value, "0", 5, 11) } |
                    Integer ~ KwSingle  ^^ { case intLit ~ s => lang.FloatLit(intLit.value, "0", 8, 24) } | 
                    Integer ~ KwDouble  ^^ { case intLit ~ s => lang.FloatLit(intLit.value, "0", 11,53) } |
                    Integer ~ floatType ^^ { case intLit ~ floatType => lang.FloatLit(intLit.value,"0", floatType.exp,floatType.sig)} |               
                    realLit ~ KwHalf    ^^ { case realLit ~ s   => lang.FloatLit(realLit.integral, realLit.frac, 5, 11) } |
                    realLit ~ KwSingle  ^^ { case realLit ~ s => lang.FloatLit(realLit.integral, realLit.frac, 8, 24) } | 
                    realLit ~ KwDouble  ^^ { case realLit ~ s => lang.FloatLit(realLit.integral, realLit.frac, 11,53) } |
                    realLit ~ floatType ^^ { case realLit ~ floatType => lang.FloatLit(realLit.integral,realLit.frac, floatType.exp,floatType.sig)}
                 }
    lazy val BitVector: PackratParser[lang.BitVectorLit] =
      positioned { bitvectorLit ^^ { case bvLit => lang.BitVectorLit(bvLit.intValue, bvLit.width) } }
    lazy val Number : PackratParser[lang.NumericLit] = positioned (Float | Integer | BitVector | Real)
    lazy val String  : PackratParser[lang.StringLit] = positioned {
      stringLit ^^ { case stringLit => lang.StringLit(stringLit) }
    }
    lazy val Literal : PackratParser[lang.Literal] = positioned (
      Bool | Number | String )
    /* END of Literals. */
    // Match quantifier patterns; but we don't want to make pattern a keyword.
    lazy val CommaSeparatedExprList : PackratParser[List[lang.Expr]] =
      E1 ~ rep("," ~> E1) ^^ { case e ~ es => e::es }
    lazy val PatternList : PackratParser[List[List[lang.Expr]]] =
      CommaSeparatedExprList ~ rep(";" ~> CommaSeparatedExprList) ^^ {
        case l ~ ls => l :: ls
      }
    lazy val Pattern : PackratParser[(lang.Identifier, List[List[lang.Expr]])] =
      Id ~ ("[" ~> PatternList <~ "]") ^^ { case id ~ pats => (id, pats) }
    lazy val E1: PackratParser[Expr] =
      KwForall ~> IdTypeList ~ Pattern.? ~ ("::" ~> (E1|Error_E1)) ^^ {
        case ids ~ pat ~ expr => {
          pat match {
            case None =>
              OperatorApplication(ForallOp(ids, List.empty), List(expr))
            case Some(p) =>
              if (p._1.name != "pattern") {
                throw new Utils.ParserError("Unknown decorator: " + p._1.toString(), Some(p._1.pos), None)
              } else {
